# chess

./: .gitignore  CMakeLists.txt  README.md  binding.cpp  binding.h  chess.h  compositor.cpp  compositor.h  console.cpp  console.h  convert.cpp  gfx.cpp  gfx.h  main.cpp  mesh.cpp  mesh.h  mesh_data.cpp  mesh_data.h  primitives.h  scene.cpp  scene.h  shader.cpp  shader.h  utils.cpp  utils.h  vertex.h
meshes/: convert_all.py  cylinder.raw
scenes/: test.scene
scripts/: init.lua
shaders/: basic.frag  basic.vert  checker.frag  checker.vert  default.vert  id.frag  id.vert  passthrough.frag  passthrough.vert  piece.frag  piece.vert  piece_reflected.frag  piece_reflected.vert  placeholder.frag  shadow.frag  shadow.vert  ssr copy.frag  ssr.frag
